# zsh-dotfiles

./: .dockerignore  .gitignore  .mcp.json  .mcp.sample.json  .pre-commit-config.yaml  AUGMENTCODE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.full  Makefile  PLAN.md  README.md  conftest.py  docker-compose.yml  dot_gemrc  executable_dot_osx  install.sh  pyproject.toml  requirements-test.txt  test_dotfiles.py  test_fzf_tab.py  test_scripts_backup_dotfiles.py  test_scripts_check_jsonc.py
.claude/: settings.json  settings.json.sample  settings.local.json  settings.local.json.sample
.claude/agents/: hello-world-agent.md  meta-agent.md  work-completion-summary.md
.claude/commands/: build.md  commit-push-pr.md  convert-to-agent.md  convert-to-slash.md  cook.md  cook_research_only.md  create-plugin.md  debug-ci.md  gp-refine.md  make_jira_expert.md  mermaid.md  plan.md  prime.md  prime_tts.md  question.md
.claude/hooks/: notification.py  stop.py  (+11 more)
.cursor/: mcp.json
.devcontainer/: devcontainer.json  on-create-command.sh
.gemini/: config.yaml  styleguide.md
.github/: dependabot.yml
docs/: README.md  architecture.md  feature-flags.md  fzf-tab.md  gotchas.md  installation.md  iterm2-and-macos.md  provisioning-scripts.md  shell-loading.md  testing-and-ci.md  version-managers.md
hack/: gpt-image-1.py
home/: .chezmoi.yaml.tmpl  .chezmoiexternal.yaml  .chezmoiignore  .chezmoiignore.tmpl  .chezmoiremove  compat.bash.tmpl  compat.sh.tmpl  config1  dot_agignore  dot_bashrc.tmpl  dot_gitconfig  dot_gitignore_global  dot_irbrc  dot_pdbrc  dot_pdbrc.py  dot_profile.tmpl  dot_vimrc  dot_zprofile.tmpl  dot_zshrc.local.tmpl  dot_zshrc.tmpl  executable_dot_osx  modify_dot_bashrc  modify_dot_profile
scripts/: CLAUDE.md  README.md  backup-dotfiles.py  check-jsonc.py  smoke-test-docker.sh
specs/: cleanup.md  docker-smoke-version-manager-toggle.md  dsf-slice-domains.md  fix-smoke-mise-version-manager.md  fzf-tab.md  migrate-asdf-to-mise.md
(+267 files in other folders)
