[project]
name = "zsh-dotfiles"
version = "0.1.0"
description = "ZSH Dotfiles Repo and Tests for my personal dotfiles and and configs"
requires-python = ">=3.13"
authors = [
    { name="Malcolm Jones", email="bossjones@theblacktonystark.com" },
]
readme = "README.md"
license = "MIT"
dependencies = [
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "firecrawl-py>=1.0.0",
    "claude-agent-sdk>=0.1.6",
    "pyyaml>=6.0",
    "funlog>=0.2.1",
    "pillow>=12.1.0",
    "numpy>=2.4.0",
    "appdirs>=1.4.4",
    "attrs>=25.4.0",
    "better-exceptions>=0.3.3",
    "blessed>=1.30.0",
    "bpython>=0.26",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "coverage>=7.13.4",
    "curtsies>=0.4.3",
    "cwcwidth>=0.1.12",
    "exceptiongroup>=1.3.1",
    "greenlet>=3.3.1",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jedi>=0.19.2",
    "libtmux>=0.53.0",
    "markdown-it-py>=4.0.0",
    "mdurl>=0.1.2",
    "packaging>=26.0",
    "parso>=0.8.6",
    "pluggy>=1.6.0",
    "prompt-toolkit>=3.0.52",
    "ptpython>=3.0.32",
    "pygments>=2.19.2",
    "pytest-cov>=7.0.0",
    "pytest-rerunfailures>=16.1",
    "pytest-sugar>=1.1.1",
    "pytest>=9.0.2",
    "pyxdg>=0.28",
    "requests>=2.32.5",
    "six>=1.17.0",
    "termcolor>=3.3.0",
    "tomli>=2.4.0",
    "urllib3>=2.6.3",
    "wcwidth>=0.6.0",
    "pytest-timeout>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.29.1",
    "rumdl>=0.0.208",
    "pytest-sugar>=1.1.1",
    "codespell>=2.4.1",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "pytest-retry>=1.7.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-skipuntil>=0.2.0",
    "pytest-subprocess>=1.5.3",
    "pytest-timeout>=2.4.0",
    "monkeytype>=23.3.0",
    "ty>=0.0.8",
]

[tool.uv]
package = false
